# code-playground

./: .editorconfig  Amazonから商品情報を取得.ipynb  Amazonから商品詳細情報を取得.ipynb  Googleの検索結果を取得.ipynb  README.md  amazon.ipynb  hello.db-client_wal_index  local_demo1.db  local_demo1.db-client_wal_index
gas/: マクロ.gs
iot/: pre-build-for-esp-idf.sh
iot/esp32/: README.md  boot.py  hoge.py  main.py  memo.md  native.py  performance_test.py  power_consumption_check.py  pymark.conf  pyproject.toml  rate.py  rates2.py  show_current_time.py
jupitar/: Amazonから商品情報を取得.ipynb  sentence_retrieval_ipynb_のコピー.ipynb  外部データ_ローカル_ファイル、ドライブ、スプレッドシート、Cloud_Storage.ipynb
py/: auction-cross-search.py  basic.py  decode_url.py  hoge.py  match.py  readme.md  type-example.py
py/apify-playground/: get_ramen_shp_from_maps.py
py/crawlee-demo/: hoge.py
py/crypto/: README.md  ccxt_example1.py  ccxt_last_price.py  coins-api.md  crypt-price.ts  hoge.txt  how_to_build_simple_crypto_live_trading_bot.py  how_to_find_optimal_stop_loss.py  price.py  price2.py  price3.py  price_notify.py  pyproject.toml  rates_yfinance.py  requirements.txt  settings.json  sol_price.py  websocket_example1.py
py/crypto/src/crypto/: __init__.py
py/csv-playground/: README.md  _pyproject.toml  arg.py  csv_to_sqlite.py  find_missing_shop.py  hoge1.py  pyproject.toml  q.txt  read_paper.py  result.csv  sqlmodel-example-test-autoupdate.py  work.py
py/csv-playground/data/: hitosara-bar-tokyo.csv  hitosara.csv  insta-url.sqlite  insta-url.sqlite.old  o.csv
py/csv-playground/src/csv_playground/: __init__.py  read_csv.py  tutorial.py
py/diagrams-playground/: pyproject.toml
py/django-playground/: README.md  _pyproject.toml  pyproject.toml
py/django-playground/myproject/diary/: urls.py  views.py
py/django-playground/myproject/myproject/: settings.py  urls.py
py/django-playground/myproject/templates/diary/: index.html
py/django-playground/src/django_playground/: __init__.py
py/duckdb-playground/: first.py  pyproject.toml
py/fastapi-playground/: pyproject.toml
py/fastapi-playground/src/fastapi_playground/: __init__.py
py/flet-playground/: README.md  _pyproject.toml  counter.py  pyproject.toml
py/flet-playground/src/flet_playground/: __init__.py
py/generics/: main.py
py/gradio-playground/: README.md  main.py  pyproject.toml
py/hoge/: pyproject.toml
py/iot/microdot-playground/: README.md  example1.py  pyproject.toml
py/iot/microdot-playground/src/microdot_playground/: __init__.py
py/learning-python/: README.md  avoid_if_else_hell.py  colorama_example.py  dic.py  hello.py  how_to_catch_multiple_exceptions.py  object-is-not-subscriptable-meaning.py  product_search.py  pyproject.toml  replacement_print_with_icecream_ic.py  short.py
py/learning-python/duckdb/: duck_sqlmodel.py  duck_sqlmodel2.py  import_csv.py  last-30-days.csv  test.duckdb  trade-last-30-days.csv
py/learning-python/src/learning_python/: __init__.py
py/linenotify/: notify_send_message.sh  notify_status.sh  pyproject.toml  readme.md  simple_notify1.py  simple_notify2.py  simple_notify3.py
py/mecab-playground/: 1-洗い髪のお妻.txt  2-自刃した武田勝頼に最期まで尽くした土屋昌恒 .txt  README.md  aozora.py  hoge.csv  hoge.ods  kusanomi.py  main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  parse_from_web.py  pyproject.toml  result.txt  result1.txt  user-dic.ods  word_cloud.py  テキストマイニング.md  ユーザ辞書の登録方法.md  ワードクラウド.md  形態素解析.md
py/playwright-demo/: crawlee_gemini1.py  hoge.py  search_ec_gemini1.py
py/poetry-demo/: pyproject.toml
py/poetry-demo/poetry_demo/: demo.py
py/pydantic-playgound/: README.md  hoge.py  mypy_test.py  persons.py  pydantic_mypy_test1.py  pyproject.toml  readme.md  tutorial2.py  tutorial3.py
py/pydantic-playgound/src/pydantic_playgound/: __init__.py
py/pyinstaller/: README.md  pyproject.toml
py/pypdf/: README.md  pyproject.toml
py/schedule-playground/: croniter-demo.py  pyproject.toml  schedule-demo.py
py/sqlmodel_playground/: tutorial1.py
py/text-from-image/: README.md  claude1.py  claude2.py  claude3.py  gemini.py  gemini2.py  gemini3.py  gemini4.py  pyproject.toml  sample1.py
py/tradingview/: README.md  broker-rest-api.04afbb09580b21c2f776.yaml  pyproject.toml
py/turso/: connect.py  hello.db  hello.db-client_wal_index
py/turso-playground/: connect_local_tutorial.py  connect_remote_tutorial.py  dbconfig.py  demoapp.py  readme.md  reference.py
py/wifi/dbus/: monitor_wifi.py  monitor_wifi_with_ssid.py  test_monitor_wifi_with_ssid.py
py/youtube-data-api/: hello.py  main.py  pyproject.toml
ts/bun/app/: run.sh
