[project]
name = "csv-playground"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "lolonao", email = "lolonao47@gmail.com" }
]
dependencies = [
    "ruff>=0.5.5",
    "duckdb>=1.0.0",
    "pydantic>=2.8.2",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "sqlmodel>=0.0.21",
    "sqlite-web>=0.6.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/csv_playground"]

[tool.pyright]
venvPath = "."
venv = ".venv"


