[project]
name = "gradio-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lolonao", email = "lolonao47@gmail.com" }
]
dependencies = [
    "gradio>=4.42.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
