[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["lolonao <lolonao47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
sqlmodel = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
