[tool.poetry]
name = "learning-python"
version = "0.1.0"
description = ""
authors = ["lolonao <lolonao47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
month = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
