[tool.poetry]
name = "learning-python"
version = "0.1.0"
description = ""
authors = ["lolonao <lolonao47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
month = "^1.2.0"
duckdb = "^1.0.0"
pandas = "^2.2.2"
polars = "^1.2.1"
icecream = "^2.1.3"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
