[project]
name = "learning-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lolonao", email = "lolonao47@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "month>=1.2.0",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.13.0",
    "pandas>=2.2.2",
    "polars>=1.2.1",
    "icecream>=2.1.3",
    "colorama>=0.4.6",
    "sqlmodel>=0.0.21",
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/learning_python"]
