[tool.poetry]
name = "pydantic-playgound"
version = "0.1.0"
description = ""
authors = ["lolonao <lolonao47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.11.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
