[project]
name = "microdot-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lolonao", email = "lolonao47@gmail.com" }
]
dependencies = [
    "microdot>=2.0.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/microdot_playground"]

[tool.pyright]
venvPath = "."
venv = ".venv"

